tests/failures/invalid_version.rs
use todo_by::todo_by_version;

fn main() {
    todo_by_version!("2024/01/01");
}
